new file:   images/.DS_Store 	new file:   images/lasagna.jpeg 	new file:   images/pasta.jpeg 	new file:   images/pizza.jpeg 	modified:   lasagna.html         Add an image of lasagna. 	new file:   pasta.html 	new file:   pizza.html 	modified:   ../index.html         Add an image of a Viking cook.         Add links to pasta.html and pizza.html. 	../.DS_Store 	../images/

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Lasangna</h1> 
+   <img src="images/lasagna.jpeg" alt="lasagna">
    <h2>Ingredients</h2>
    <ul>
     <li>1 tablespoon vegetable oil</li>
