--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>    
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <img src="images/odin_cook.jpeg" alt="Odin cooks">
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/pasta.html">Pasta</a></li>
+        <li><a href="recipes/pizza.html">Pesto Pizza</a></li>
+    </ul>
 </body>
 </html>
