Style index.html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>    
-    <img src="images/odin_cook.jpeg" alt="Odin cooks">
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/pasta.html">Pasta</a></li>
-        <li><a href="recipes/pizza.html">Pesto Pizza</a></li>
-    </ul>
+    <header>
+
+        <img class="logo" src="images/odin_cook.jpeg" alt="A Viking Cook">
+        <h1>Odin's Recipes</h1>    
+    </header>
+    <main>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/pasta.html">Pasta</a></li>
+            <li><a href="recipes/pizza.html">Pesto Pizza</a></li>
+        </ul>
+    </nain>
 </body>
 </html>
